--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@tailwindcss/typography": "^0.5.15",
     "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -32,9 +33,6 @@
     "react-markdown": "^9.0.1",
     "react-router-dom": "^7.0.1",
     "react-syntax-highlighter": "^15.6.1",
-    "rehype-parse": "^9.0.1",
-    "rehype-remark": "^10.0.0",
-    "rehype-stringify": "^10.0.1",
     "remark-gfm": "^4.0.0",
     "slugify": "^1.6.6",
     "tailwind-merge": "^2.5.5",
