--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "markdown-it": "^14.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^4.1.2",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^7.0.1",
-    "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.0",
     "slugify": "^1.6.6",
     "tailwind-merge": "^2.5.5",
@@ -50,7 +50,6 @@
     "@types/node": "^22.9.3",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "@types/react-syntax-highlighter": "^15.5.13",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.13.0",
