--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-error-boundary": "^4.1.2",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.14.1",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^7.0.1",
     "remark-gfm": "^4.0.0",
