--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "harrier-site",
+  "homepage": "https://harrier-org.github.io/harrier-site",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "lint": "eslint ."
   },
   "dependencies": {
@@ -25,7 +28,6 @@
     "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "gh-pages": "^6.3.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.460.0",
     "markdown-it": "^14.1.0",
@@ -58,6 +60,7 @@
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
+    "gh-pages": "^6.3.0",
     "globals": "^15.11.0",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
