--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "harrier-site",
-  "homepage": "https://harrier-org.github.io/harrier-site",
+  "homepage": "https://harrier-org.github.io/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
